# nn-archs

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: dummy_examples_conv.ipynb
