[tool.poetry]
name = "nn-archs"
version = "0.1.0"
description = ""
authors = ["anacastillonu <ana.castillonu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.1.0"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
torchviz = "^0.0.2"
torchvision = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
